@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.635 2006/04/01 18:56:14 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.636 2006/04/03 03:23:24 agaffney Exp $
+
+  2 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIClientController.py:
+  record PID of secondary thread
 
   1 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIGenDialog.py:
